# borealis_nwn_model_viewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: main.cpp
src/animation/: AnimationPlayer.cpp  AnimationPlayer.hpp  KeyframeInterpolator.hpp
src/renderer/: Camera.cpp  Camera.hpp  GpuMesh.cpp  GpuMesh.hpp  GpuTexture.cpp  GpuTexture.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/renderer/shaders/: basic.frag  basic.vert  skinned.frag  skinned.vert
src/ui/: AnimationControls.cpp  AnimationControls.hpp  MainWindow.cpp  MainWindow.hpp  MdlSourceViewer.cpp  MdlSourceViewer.hpp  MdlSyntaxHighlighter.cpp  MdlSyntaxHighlighter.hpp  ModelTreeView.cpp  ModelTreeView.hpp  ModelViewport.cpp  ModelViewport.hpp
